src/test/ui/issues/issue-26094.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/issue-26094.rs:10:17
   |
LL |         $other(None)
   |                ---- supplied 1 argument
...
LL | fn some_function() {}
   | ------------------ defined here
...
LL |     some_macro!(some_function);
   |                 ^^^^^^^^^^^^^ expected 0 arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0061`.
